fixes mobile layout for notes field and line breaks in notes display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,12 @@
   padding-top: 12%;
   margin-top: -7%;
 }
+  @media screen and (max-width: 445px){
+    .index-main {
+      padding-top: 20%;
+      margin-top: -12%;
+    }
+  }
   .main-sheer {
     min-height: 120vh;
     max-height: fit-content;
@@ -39,6 +45,22 @@
   margin-top: 8%;
   /* margin-bottom: 10%; */
 }
+  @media only screen and (max-width: 445px) {
+    .index-headline h1 {
+      font-size: 2.2rem;
+    }
+  }
+  @media only screen and (max-width: 500px) and (min-width: 440px) {
+    .index-headline h1 {
+      margin-left: 4rem;
+      margin-right: 4rem;
+    }
+  }
+  @media only screen and (max-width: 346px) {
+    .index-headline {
+      margin-top: 0;
+    }
+  }
 
 footer {
   min-height: 200px;
@@ -313,4 +335,8 @@ footer {
 .carousel-image {
   min-width: 100%;
   min-height: 100%;
+}
+
+.notes {
+  white-space:pre-line;
 }
